made the dot append to the display

--- a/index.html
+++ b/index.html
@@ -16,9 +16,7 @@
             <div>Calculator</div>
             <input type="text" class = 'display' placeholder="0" readonly>
             <div>
-                <button class="numbers" >9</button><button class="numbers" >8</button><button class="numbers" >7</button><button class="numbers" >6</button><button class="numbers" >5</button><button class="numbers" >4</button><button class="numbers" >3</button><button class="numbers" >2</button><button class="numbers" >1</button>
-                <button class="zero" >0</button>
-                <button class="dot" >.</button>
+                <button class="numbers" >9</button><button class="numbers" >8</button><button class="numbers" >7</button><button class="numbers" >6</button><button class="numbers" >5</button><button class="numbers" >4</button><button class="numbers" >3</button><button class="numbers" >2</button><button class="numbers" >1</button><button class="zero" >0</button><button class="dot" >.</button>
             </div>
             <div>
                 <button class="operators" >+</button><button class="operators" >-</button><button class="operators" >*</button><button class="operators" >/</button>
