--- a/index.html
+++ b/index.html
@@ -12,17 +12,19 @@
         <h1>Ghost Calculator</h1>
     </header>
     <main>
-        <div>
-            <div>Calculator</div>
+        <div class="all">
+            <div class="calcName">Calculator</div>
             <input type="text" class = 'display' placeholder="0" readonly>
-            <div>
-                <button class="numbers" >9</button><button class="numbers" >8</button><button class="numbers" >7</button><button class="numbers" >6</button><button class="numbers" >5</button><button class="numbers" >4</button><button class="numbers" >3</button><button class="numbers" >2</button><button class="numbers" >1</button><button class="zero" >0</button><button class="dot" >.</button>
-            </div>
-            <div>
-                <button class="operators" >+</button><button class="operators" >-</button><button class="operators" >*</button><button class="operators" >/</button>
-            </div>
-            <div>
-                <button class="clear" >AC</button><button class="back" >back</button><button class="equal" >=</button>
+            <div class="allButtons">
+                <div class="theNumbers">
+                    <button class="numbers" >9</button><button class="numbers" >8</button><button class="numbers" >7</button><button class="numbers" >6</button><button class="numbers" >5</button><button class="numbers" >4</button><button class="numbers" >3</button><button class="numbers" >2</button><button class="numbers" >1</button><button class="zero" >0</button><button class="dot" >.</button>
+                </div>
+                <div class="allOperators">
+                    <button class="operators" >+</button><button class="operators" >-</button><button class="operators" >*</button><button class="operators" >/</button>
+                </div>
+                <div class="actionButtons">
+                    <button class="clear" >AC</button><button class="back" >back</button><button class="equal" >=</button>
+                </div>
             </div>
         </div>
     </main>
