--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <main>
         <div class="all">
             <div class="calcName">Calculator</div>
-            <input type="text" class = 'display' placeholder="0" readonly>
+            <input type="text" class = 'display' placeholder="0" readonly maxlength="10">
             <div class="allButtons">
                 <div class="theNumbers">
                     <button class="numbers" >9</button><button class="numbers" >8</button><button class="numbers" >7</button><button class="numbers" >6</button><button class="numbers" >5</button><button class="numbers" >4</button><button class="numbers" >3</button><button class="numbers" >2</button><button class="numbers" >1</button><button class="zero" >0</button><button class="dot" >.</button>
